shady-KISS-skin History
-------------------------------------------

2016-04-20:
- Added setup for epg2vdrShowHostname
- Added setup if skindesigner is patched for epg2vdr

2016-04-18:
- New icons for remote-timer

2016-04-17:
- First steps with epg2vdr
- Fixed patch for epg2vdr

2016-04-15:
- Added svgtemplates/skinparts for compatibility with skindesigner-0.9.6
- Modified ratingstars for plugplex
- Reworked plug-plex-detail
- New arrow for plex-trailer

2016-04-07:
- Added marker for switchtimer in tvguideng

2016-04-05:
- Filled bottommost line of OSD with Black (workaround for .....?)
- Reduced size if coloured markers
- Removed debug

2016-04-04:
- Small fix for timeredit
- Added setup for channelname in displaychannel
- Enlarged height of channelpanel

2016-04-02:
- Fixed timerconflictmenu

2016-03-31:
- Fixed condition with recordingedit

2016-03-30:
- Added rewind- and fastforward-speed in controliconsmodeonly

2016-03-29:
- Changed optional bright cutmarks in displayreplay
- Added rewind- and fastforward-speed

2016-03-26:
- Some more stuff for plex II
- Added setup-submenu für pluginspecific settings
- Added optional bright background for replayprogressbar

2016-03-19:
- Added thumbs for extras in plug-plex-detail

2016-03-18:
- Some more stuff for plex

2016-03-16:
- Small fixes in plug-plex-root

2016-03-13:
- Fixed progressbarcolour in plex-detail-view
- Added setup for banner and poster in displaychannel, switched from shifting to fading


2016-03-12:
- First steps with plug-plex-detail

2016-03-11:
- Added banner in displaychannel 

2016-03-09:
- Added timerconflicts in displaymenudefault 

2016-03-07:
- Removed scalingtv* in all views but main- and setupmenu
- Removed Debug in displaymenudefault
- Reactivated blinking of recording-marker in displaychannel

2016-02-06:
- Fixed bug in translations of setup.xml

2016-02-03:
- Added optional devices-widget for mainmenu

2016-02-02:
- Adjusted width of systeminfo-progressbar