@@ -84,13 +84,12 @@
 					<drawtext condition="{current}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 					<drawtext condition="not{current}" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 				</areascroll>
-				<areascroll condition="{isremote}++{epg2vdrShowHostname}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="25%" width="66%" layer="3">
-					<drawtext condition="{current}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname} - {title}"/>
-					<drawtext condition="not{current}" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname} - {title}"/>
-				</areascroll>
-				<areascroll condition="{isremote}++not{epg2vdrShowHostname}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="25%" width="66%" layer="3">
-					<drawtext condition="{current}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
-					<drawtext condition="not{current}" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
+				<areascroll condition="{isremote}++{epg2vdrShowHostname}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.255" width="{areawidth}*0.66" layer="3">
+					<drawtext name="vdrname" valign="center" width="{areawidth}*0.0125*{hostnameChars}" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname}"/>
+					<drawrectangle x="{areawidth}*0.0125*{hostnameChars}" y="1" width="1" height="{areaheight}-2" color="{clrBlack}" />
+					<drawrectangle x="{areawidth}*0.0125*{hostnameChars}+1" y="1" width="1" height="{areaheight}-2" color="{clrRecMenuConflTop}" />
+					<drawtext condition="{current}" x="{areawidth}*0.0125*{hostnameChars}+10" name="timertext" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
+					<drawtext condition="not{current}" x="{areawidth}*0.0125*{hostnameChars}+10" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 				</areascroll>
 			</areacontainer>
 <!--tallCurrentInfo-->
@@ -125,9 +124,13 @@
 					<drawtext condition="{current}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 					<drawtext condition="not{current}" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 				</areascroll>
-				<areascroll condition="{isremote}++{epg2vdrShowHostname}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.255" width="40%" layer="3">
-					<drawtext condition="{current}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname} - {title}"/>
-					<drawtext condition="not{current}" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname} - {title}"/>
+				
+				<areascroll condition="{isremote}++{epg2vdrShowHostname}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.255" width="{areawidth}*0.4" layer="3">
+					<drawtext name="vdrname" valign="center" width="{areawidth}*0.0205*{hostnameChars}" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname}"/>
+					<drawrectangle x="{areawidth}*0.0205*{hostnameChars}" y="1" width="1" height="{areaheight}-2" color="{clrBlack}" />
+					<drawrectangle x="{areawidth}*0.0205*{hostnameChars}+1" y="1" width="1" height="{areaheight}-2" color="{clrRecMenuConflTop}" />
+					<drawtext condition="{current}" x="{areawidth}*0.0205*{hostnameChars}+10" name="timertext" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
+					<drawtext condition="not{current}" x="{areawidth}*0.0205*{hostnameChars}+10" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 				</areascroll>
 				<areascroll condition="{isremote}++not{epg2vdrShowHostname}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.255" width="40%" layer="3">
 					<drawtext condition="{current}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
@@ -165,10 +168,13 @@
 				<areascroll condition="not{isremote}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.255" width="35%" layer="3">
 					<drawtext condition="{current}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 					<drawtext condition="not{current}" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
-				</areascroll>			
-				<areascroll condition="{isremote}++{epg2vdrShowHostname}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.255" width="35%" layer="3">
-					<drawtext condition="{current}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname} - {title}"/>
-					<drawtext condition="not{current}" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname} - {title}"/>
+				</areascroll>
+				<areascroll condition="{isremote}++{epg2vdrShowHostname}++{epg2vdr-skdPatch}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.255" width="{areawidth}*0.35" layer="3">
+					<drawtext name="vdrname" valign="center" width="{areawidth}*0.0235*{hostnameChars}" font="{light}" fontsize="70%" color="{clrLightGray}" text="{vdrname}"/>
+					<drawrectangle x="{areawidth}*0.0235*{hostnameChars}" y="1" width="1" height="{areaheight}-2" color="{clrBlack}" />
+					<drawrectangle x="{areawidth}*0.0235*{hostnameChars}+1" y="1" width="1" height="{areaheight}-2" color="{clrRecMenuConflTop}" />
+					<drawtext condition="{current}" x="{areawidth}*0.0235*{hostnameChars}+10" name="timertext" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
+					<drawtext condition="not{current}" x="{areawidth}*0.0235*{hostnameChars}+10" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
 				</areascroll>
 				<areascroll condition="{isremote}++not{epg2vdrShowHostname}" scrollelement="timertext" mode="forthandback" orientation="horizontal" delay="1000" scrollspeed="medium" x="{areawidth}*0.255" width="35%" layer="3">
 					<drawtext condition="{current}" name="timertext" x="0" valign="center" font="{light}" fontsize="70%" color="{clrLightGray}" text="{title}"/>
